pages release test

--- a/javascript/input_field.html
+++ b/javascript/input_field.html
@@ -13,7 +13,7 @@
     onclick="openpage('Letargia')"
     >Fáradt vagyok</button>
 
-    <input type="button" value="Beteg vagyok" onclick="openpage('Betegség')" />
+    <input class="sick" type="button" value="Beteg vagyok" onclick="openpage('Betegség')" />
 
 
 <a href="./link.html" target="_blank">Link</a>
